@@ -7,32 +7,32 @@
   <classpathentry exported="true" kind="lib" path="build/hadoopcore/hadoop-@HADOOPVER@/lib/@SERVLETAPIJAR@"/>
   <classpathentry exported="true" kind="lib" path="build/hadoopcore/hadoop-@HADOOPVER@/lib/@JETTYJAR@"/>
   <classpathentry exported="true" kind="lib" path="build/hadoopcore/hadoop-@HADOOPVER@/lib/@JETTYUTILJAR@"/>
-  <classpathentry exported="true" kind="lib" path="cli/lib/jline-0.9.94.jar"/>
+  <classpathentry exported="true" kind="lib" path="cli/lib/jline-@jline.version@.jar"/>
   <classpathentry exported="true" kind="lib" path="lib/json.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/asm-3.1.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/commons-cli-2.0-SNAPSHOT.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/commons-codec-1.3.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/commons-lang-2.4.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/commons-logging-1.0.4.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/asm-@asm.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/commons-cli-@commons-cli.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/commons-codec-@commons-codec.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/commons-lang-@commons-lang.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/commons-logging-@commons-logging.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/commons-logging-api-@commons-logging-api.version@.jar"/>
   <classpathentry exported="true" kind="lib" path="lib/derby.jar"/>
   <classpathentry exported="true" kind="lib" path="lib/hbase-0.20.3.jar"/>
   <classpathentry exported="true" kind="lib" path="lib/hbase-0.20.3-test.jar"/>
   <classpathentry exported="true" kind="lib" path="lib/libfb303.jar"/>
   <classpathentry exported="true" kind="lib" path="lib/libthrift.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/zookeeper-3.2.2.jar"/>
-  <classpathentry exported="true" kind="lib" path="lib/log4j-1.2.15.jar"/>
-  <classpathentry exported="true" kind="lib" path="ql/lib/antlr-3.0.1.jar"/>
-  <classpathentry exported="true" kind="lib" path="ql/lib/antlr-runtime-3.0.1.jar"/>
-  <classpathentry exported="true" kind="lib" path="testlibs/junit-3.8.1.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/jdo-api-3.1-SNAPSHOT.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/datanucleus-core-2.1.1.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/datanucleus-enhancer-2.1.0-release.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/datanucleus-rdbms-2.1.1.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/commons-collections-3.2.1.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/commons-dbcp-1.4.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/datanucleus-connectionpool-2.0.3.jar"/>
-  <classpathentry kind="lib" path="build/dist/lib/commons-pool-1.5.4.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/zookeeper-@zookeeper.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="lib/log4j-@log4j.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="ql/lib/antlr-@antlr.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="ql/lib/antlr-runtime-@antlr-runtime.version@.jar"/>
+  <classpathentry exported="true" kind="lib" path="testlibs/junit-@junit.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/jdo-api-@jdo-api.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/datanucleus-core-@datanucleus-core.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/datanucleus-enhancer-@datanucleus-enhancer.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/datanucleus-rdbms-@datanucleus-rdbms.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/commons-collections-@commons-collections.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/commons-dbcp-@commons-dbcp.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/datanucleus-connectionpool-@datanucleus-connectionpool.version@.jar"/>
+  <classpathentry kind="lib" path="build/dist/lib/commons-pool-@commons-pool.version@.jar"/>
   <classpathentry kind="src" path="build/metastore/gen-java"/>
   <classpathentry kind="src" path="build/ql/gen-java"/>
   <classpathentry kind="src" path="build/contrib/test/src"/>
